--- a/app/components/ResidentDocumentsViewer/ResidentDocumentsViewer.html
+++ b/app/components/ResidentDocumentsViewer/ResidentDocumentsViewer.html
@@ -104,7 +104,7 @@
                             <tbody ng-hide="vm.filteredResidentAdhocInterventionsQuestionAnswer.length>0">
                                 <tr>
                                     <td colspan="4">
-                                        There are no Documents.
+                                        There are no Documentss.
                                     </td>
                                 </tr>
                             </tbody>
